dark mode button without background as text edit and format correctly + delete the css and generate the scss for the home.componente.scss. Reformat styles

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -81,6 +81,12 @@ http://ionicframework.com/docs/theming/ */
   --ion-background-color: #ffffff;
   --ion-text-color: #000000; /* Standard Textfarbe für Light Mode */
   --ion-card-background: #ffffff;
+
+  /* Buttons Colors */
+  --ion-button-background: var(--ion-color-secondary);
+  --ion-button-background-rgb: var(--ion-color-secondary-rgb);
+  --ion-button-color: var(--ion-color-secondary-contrast);
+  --ion-button-color-rgb: var(--ion-color-secondary-contrast-rgb);
 }
 
 /* Dark Mode Variables */
@@ -161,6 +167,12 @@ http://ionicframework.com/docs/theming/ */
   --ion-background-color: #1F1F39;
   --ion-text-color: #ffffff; /* Standard Textfarbe für Dark Mode */
   --ion-card-background: #35354d;
+
+  /* Button Colors */
+  --ion-button-background: var(--ion-color-secondary);
+  --ion-button-background-rgb: var(--ion-color-secondary-rgb);
+  --ion-button-color: var(--ion-color-secondary-contrast);
+  --ion-button-color-rgb: var(--ion-color-secondary-contrast-rgb);
 }
 
 /* Light Mode Specific Styles */
@@ -253,4 +265,11 @@ http://ionicframework.com/docs/theming/ */
     --ion-toolbar-background: var(--ion-color-step-150);
     --ion-toolbar-border-color: var(--ion-color-step-250);
   }
+}
+
+.achievementsButton,
+.stats-button,
+.meine-module {
+  --background: var(--ion-button-background);
+  --color: var(--ion-button-color);
 }
